The code almost work. it passes the test suit except for a case where it in correctly reports the originial constraint. constraintList_addList memory leak and probably still present as well.: CVS

--- a/src/Makefile
+++ b/src/Makefile
@@ -313,7 +313,7 @@ $(CHECKS): lclint.lcd
 ### 
 
 lint: 
-	$(LCLINT) -f lclint.lclintrc $(CPPFLAGS) +forcehints +singleinclude -exportLocal -nestcomments -uniondef -abstract -namechecks -protoparammatch -boolops $(ALLSRC) -dump lclint
+	$(LCLINT) -f lclint.lclintrc $(CPPFLAGS) +forcehints +singleinclude -nestcomments -fcnuse -uniondef -exportlocal -exportheader -abstract -namechecks -protoparammatch -boolops $(ALLSRC) -dump  lclint
 
 
 
