Fixed library dump support so that buffer constraint annotations are read and written to the dump files.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,8 +1,8 @@
 all:
-	lclint -nolib +impconj ansi.h -dump ansi 
-	lclint -nolib +impconj -DSTRICT ansi.h -dump ansistrict
-	lclint -nolib +impconj ansi.h posix.h -dump posix
-	lclint -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
-	lclint -nolib +impconj ansi.h posix.h unix.h -dump unix
-	lclint -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
+	../bin/lclint -nolib +impconj ansi.h -dump ansi 
+	../bin/lclint -nolib +impconj -DSTRICT ansi.h -dump ansistrict
+	../bin/lclint -nolib +impconj ansi.h posix.h -dump posix
+	../bin/lclint -nolib +impconj -DSTRICT ansi.h posix.h -dump posixstrict
+	../bin/lclint -nolib +impconj ansi.h posix.h unix.h -dump unix
+	../bin/lclint -nolib +impconj -DSTRICT ansi.h posix.h unix.h -dump unixstrict
 
