Fixed bugs in the constant removal code for binary expressions. Added test of this.

--- a/test/Makefile
+++ b/test/Makefile
@@ -656,7 +656,7 @@ simplebufferConstraintTests:
 
 moreBufferTests:
 	@cd moreBufferTests; \
-	$(LCLINTR) +functionconstraint +orconstraint unrecogCall.c strrchr.c initialization.c simplifyTest.c
+	$(LCLINTR) +functionconstraint +orconstraint unrecogCall.c strrchr.c initialization.c simplifyTest.c strncatNotReallyGood.c strncatReallyGood.c
 
 maxset:
 	@cd maxset; \
